# aiorecycle

./: .travis.yml  Pipfile  README.md  README.rst  requirements-dev.txt  setup.cfg
aiorecycle/: __init__.py
examples/: main.py
tests/: test_aiorecycle.py
