[metadata]
name = aiorecycle
version = attr: aiorecycle.__VERSION__
description = A decorator to recycle tasks in the event loop
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
classifiers = 
	License :: OSI Approved :: Apache Software License
	Intended Audience :: Developers
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Software Development :: Libraries
	Framework :: AsyncIO
author = Maxim Pyatishev
author_email = mpyatishev@gmail.com
url = https://github.com/mpyatishev/aiorecycle

[options]
zip_safe = False
tests_require =
	pytest
	pytest-asyncio
	pytest-cov
	pytest-pspec
